header.js fixed links visibility on mobile

--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -44,6 +44,6 @@
 
 @media screen and (max-width: 620px) {
   .nav-links {
-    visibility: 'hidden';
+    visibility: hidden;
   }
 }
